--- a/exercises/wiki-page/index.html
+++ b/exercises/wiki-page/index.html
@@ -59,14 +59,16 @@
             experimental results might suggest that there are
             multiple mechanisms across different species, an
             example of convergent evolution.
-            <sup>[citation needed]</sup> Some hypotheses
-            contend that the interdigitation of canopy branches
-            leads to "reciprocal pruning" of adjacent trees:
-            trees in windy areas suffer physical damage as they
-            collide with each other during winds; the abrasions
-            and collisions induce a crown shyness response.
-            Studies suggest that lateral branch growth is largely
-            uninfluenced by neighbours until disturbed by
+            <sup>[citation needed]</sup> 
+        </p>
+        <p>
+            Some hypotheses contend that the interdigitation of
+            canopy branches leads to "reciprocal pruning" of
+            adjacent trees: trees in windy areas suffer physical
+            damage as they collide with each other during winds;
+            the abrasions and collisions induce a crown shyness
+            response. Studies suggest that lateral branch growth
+            is largely uninfluenced by neighbours until disturbed by
             mechanical abrasion.<sup>[10]</sup> If the crowns are
             artificially prevented from colliding in the winds,
             they gradually fill the canopy gaps.<sup>[11]</sup>
