--- a/exercises/wiki-page-1/index.html
+++ b/exercises/wiki-page-1/index.html
@@ -8,6 +8,9 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <h1>Crown Shyness</h1>
+        <hr>
+
         <h6>From Wikipedia, the free encyclopedia</h6>
         <p>
             <i>
@@ -47,7 +50,7 @@
 
         <img
             src="images/canopyimage.jpg"
-            height="200"
+            height="220"
             alt="Dryobalanops Aromatica Canopy"
         >
 
