Updated color palette

--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -35,7 +35,7 @@
                 <h3>Bice Blue</h3>
                 <h5>#1D70A2</h5>
             </div>
-        <div>
+        </div>
 
         <div id="pal2-font">
             <h2 id="pal2-head">Infantry</h2>
@@ -59,7 +59,7 @@
                 <h3>Columbian Blue</h3>
                 <h5>#B7D1DA</h5>
             </div>
-        <div>
+        </div>
 
         <div id="pal3-font">
             <h2 id="pal3-head">Make-up Brand</h2>
@@ -88,6 +88,6 @@
                 <h3>Misty Rose</h3>
                 <h5>#EAD7D7</h5>
             </div>
-        <div>
+        </div>
     </body>
 </html>
