--- a/demos/09-combining selectors/index.html
+++ b/demos/09-combining selectors/index.html
@@ -35,5 +35,25 @@
             eius enim cupiditate provident 
             obcaecati natus totam?
         </p>
+
+        <ul>
+            <li>
+                <a href="#">Item 1</a>
+            </li>
+            <li>
+                <p>
+                    Lorem ipsum dolor
+                    <a href="#">Item 2</a>
+                    rolod muspi merol
+                </p>
+            </li>
+            <li>
+                <div>
+                    Lorem ipsum dolor
+                    <a href="#">Item 2</a>
+                    rolod muspi merol
+                </div>
+            </li>
+        </ul>
     </body>
 </html>
