--- a/exercises/containers-selectors-drills/containers-selectors-drills/index.html
+++ b/exercises/containers-selectors-drills/containers-selectors-drills/index.html
@@ -79,23 +79,24 @@
                     adipisicing elit. Officiis qui enim 
                     cupiditate obcaecati!
                 </p>
-
-                <p>
-                    Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Dolores praesentium 
-                    cupiditate quo dolor, iure voluptatum 
-                    ex nostrum eius.
-                </p>
-
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur 
-                    adipisicing elit. Dolor, eveniet? Facere 
-                    suscipit dolore amet debitis dicta 
-                    praesentium? Explicabo accusamus in vel 
-                    atque dicta veritatis aut facere tenetur 
-                    nulla velit? Nisi!
-                </p>
-
+                <div class="purple">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Dolores praesentium 
+                        cupiditate quo dolor, iure voluptatum 
+                        ex nostrum eius.
+                    </p>
+                    <div class="blue">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur 
+                            adipisicing elit. Dolor, eveniet? Facere 
+                            suscipit dolore amet debitis dicta 
+                            praesentium? Explicabo accusamus in vel 
+                            atque dicta veritatis aut facere tenetur 
+                            nulla velit? Nisi!
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -110,35 +111,37 @@
                 elements, and make their text color "magenta". 
             </p>
             <div class="solution">
+                <div class="dashed">
+                    <p>
+                        Lorem ipsum dolor sit, <span>amet</span> 
+                        consectetur adipisicing elit. Placeat 
+                        facere <span>nostrum cupiditate</span> 
+                        obcaecati.
+                    </p>
+                    <span>Voluptatem veniam assumenda?</span>
+                    <p> 
+                        Nisi <span>reiciendis illo</span> aperiam 
+                        reprehenderit quidem, ab doloremque 
+                        eveniet deleniti quis accusantium autem 
+                        veniam, <span>totam maiores</span>.
+                    </p>
+                </div>
 
-                <p>
-                    Lorem ipsum dolor sit, <span>amet</span> 
-                    consectetur adipisicing elit. Placeat 
-                    facere <span>nostrum cupiditate</span> 
-                    obcaecati.
-                </p>
-                <span>Voluptatem veniam assumenda?</span>
-                <p> 
-                    Nisi <span>reiciendis illo</span> aperiam 
-                    reprehenderit quidem, ab doloremque 
-                    eveniet deleniti quis accusantium autem 
-                    veniam, <span>totam maiores</span>.
-                </p>
-
-                <p>
-                    <span>Lorem ipsum dolor</span> sit, amet 
-                    consectetur adipisicing elit. 
-                    <span>Placeat</span> 
-                    facere nostrum cupiditate obcaecati, 
-                </p>
-                <span>Quasi reiciendis sunt harum iusto!</span>
-                <p>
-                    Reprehenderit <span>quidem</span>, ab 
-                    doloremque eveniet deleniti quis 
-                    <span>accusantium autem</span>
-                    veniam, totam maiores.
-                </p>
-
+                <div class="dotted">
+                    <p>
+                        <span>Lorem ipsum dolor</span> sit, amet 
+                        consectetur adipisicing elit. 
+                        <span>Placeat</span> 
+                        facere nostrum cupiditate obcaecati, 
+                    </p>
+                    <span>Quasi reiciendis sunt harum iusto!</span>
+                    <p>
+                        Reprehenderit <span>quidem</span>, ab 
+                        doloremque eveniet deleniti quis 
+                        <span>accusantium autem</span>
+                        veniam, totam maiores.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -154,11 +157,15 @@
             </p>
             <div class="solution">
 
+                <div class="shadowed">
                     <p>BOXED</p>
                     <p>BOXED</p>
-                    <p>BOXED</p>
-                    <p>BOXED</p>
+                </div>
 
+                <div class="inset-shadow">
+                    <p>BOXED</p>
+                    <p>BOXED</p>
+                </div>
             </div>
         </section>
 
@@ -174,28 +181,31 @@
                 border)
             </p>
             <div class="solution">
+                <div class="dog-days">
+                    <img 
+                        src="images/dog.jpg"
+                        alt="happy pupper"
+                    >
+                    <p id="d7-p-1" class="d7-p">
+                        Lorem ipsum dolor sit, amet 
+                        consectetur adipisicing elit. Placeat 
+                        facere nostrum cupiditate obcaecati, 
+                        nisi reiciendis.
+                    </p>
+                </div>
 
-                <img 
-                    src="images/dog.jpg"
-                    alt="happy pupper"
-                >
-                <p id="d7-p-1" class="d7-p">
-                    Lorem ipsum dolor sit, amet 
-                    consectetur adipisicing elit. Placeat 
-                    facere nostrum cupiditate obcaecati, 
-                    nisi reiciendis.
-                </p>
-                <p id="d7-p-2" class="d7-p">
-                    Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Dolores numquam 
-                    facilis unde provident veritatis 
-                    iure consectetur.
-                </p>
-                <img 
-                    src="images/egypt-kitty.webp"
-                    alt="regal kitteh"
-                >
-
+                <div class="cat-tales">
+                    <p id="d7-p-2" class="d7-p">
+                        Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Dolores numquam 
+                        facilis unde provident veritatis 
+                        iure consectetur.
+                    </p>
+                    <img 
+                        src="images/egypt-kitty.webp"
+                        alt="regal kitteh"
+                    >
+                </div>
             </div>
         </section>
     </body>
