Box Project final

--- a/projects/studio-gallery/index.html
+++ b/projects/studio-gallery/index.html
@@ -17,33 +17,35 @@
                 <div class="floor"></div>
                 <div class="showing-area">
 
-                    <div class="display-space" id="cosmic-warp">
+                    <div class="display-space">
+                        <!-- Add your code for your 2nd poster/piece here -->
+                        <img id="black-hole"
+                            src="images/black-hole-image.jpg"
+                            width="85"
+                            height="60"
+                            alt="Black Hole Image"
+                        >
+                        <h1 id="space-text">Space Gallery</h1>
+                    </div>
+
+                    <div class="display-space" >
                         <!-- Add your code for your 1st poster/piece here -->
-                        <img 
+                        <img id="cosmic-warp"
                             src="images/cosmic-warp-image.jpg"
-                            width="150"
+                            width="170"
                             alt="Cosmic Warp Image"
                         >
                     </div>
 
-                    <div class="display-space" id="black-hole">
-                        <!-- Add your code for your 2nd poster/piece here -->
-                        <img 
-                            src="images/black-hole-image.jpg"
-                            width="90"
-                            alt="Black Hole Image"
-                        >
-                    </div>
-
-                    <div class="display-space" id="supernova">
+                    <div class="display-space">
                         <!-- Add your code for your 3rd poster/piece here -->
-                        <img 
+                        <img id="supernova"
                             src="images/supernova-image.jpg"
                             width="100"
+                            height="60"
                             alt="Supernova Image"
                         >
                     </div>
-
                 </div>
             </div>
         </div>
