--- a/projects/studio-gallery/index.html
+++ b/projects/studio-gallery/index.html
@@ -19,7 +19,8 @@
 
                     <div class="display-space">
                         <!-- Add your code for your 2nd poster/piece here -->
-                        <img id="black-hole"
+                        <img
+                            id="black-hole"
                             src="images/black-hole-image.jpg"
                             width="85"
                             height="60"
@@ -30,7 +31,8 @@
 
                     <div class="display-space" >
                         <!-- Add your code for your 1st poster/piece here -->
-                        <img id="cosmic-warp"
+                        <img
+                            id="cosmic-warp"
                             src="images/cosmic-warp-image.jpg"
                             width="170"
                             alt="Cosmic Warp Image"
@@ -39,7 +41,8 @@
 
                     <div class="display-space">
                         <!-- Add your code for your 3rd poster/piece here -->
-                        <img id="supernova"
+                        <img
+                            id="supernova"
                             src="images/supernova-image.jpg"
                             width="100"
                             height="60"
