--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -35,79 +35,121 @@
 
             <div id="main">
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/freefall-image.png"
+                            alt="World Record Freefall"
+                        >
+                    </div>
+                    <h4>
+                        <a href="#">
+                            I Jumped From Space (World Record Supersonic Freefall
+                        </a>
+                    </h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Red Bull</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">39M views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">2 years ago</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/space-relax-image.png"
+                            alt="Space Relaxation Video"
+                        >
+                    </div>
+                    <h4>
+                        <a href="#">
+                            Travel the Universe While Relaxation
+                        </a>
+                    </h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Relaxation Ambient Music</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">3.7M views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">2 years ago</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/star-black-hole-image.png"
+                            alt="Facts about Space Video"
+                        >
+                    </div>
+                    <h4>
+                        <a href="#">
+                            50+ Facts About Space Will Scare and Amaze You
+                        </a>
+                    </h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">BRIGHT SIDE</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">2.4M views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">Streamed 3 years ago</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/three-hour-image.png"
+                            alt="3 Hours of Space Facts Video"
+                        >
+                    </div>
+                    <h4><a href="#">3 Hours of Space Facts to Fall Asleep to</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Exolife</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">164K views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">5 months ago</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/eight-wonders-image.png"
+                            alt="Eight Wonders of Our Solar System Video"
+                        >
+                    </div>
+                    <h4><a href="#">Eight Wonders of Our Solar System</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">BBC Earth Science</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">7.3M views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">1 year ago</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="metube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="thumbnail-placeholder">
+                        <img
+                            src="images/living-room-image.png"
+                            alt="Living Room Spaceship Video"
+                        >
+                    </div>
+                    <h4><a href="#">Living Room Spaceship</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Universe</div>
                         <div class="view-and-post">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">6.1M views</span>
                             &bull;
-                            <span class="video-post">1 day ago</span>
+                            <span class="video-post">4 years ago</span>
                         </div>
                     </div>
                 </div>
