--- a/projects/mebay-product-page/index.html
+++ b/projects/mebay-product-page/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <div id="grid-layout">
-            <div id="header"></div>
+            <div id="header">
+                <span id="m">m</span><span id="e">e</span><span id="b">b</span><span id="a">a</span><span id="y">y</span>
+                
+                <hr>
+            </div>
             
             <div id="sidebar">
                 <img src="images/laptop-image-1.webp">
