--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -8,6 +8,26 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="promo">
+            BOGO 50% off on select costumes - Use code: BOGO50
+        </div>
+
+        <div id="navbar-3" class="navbars">
+            <h1 id="title">Tailored Spooks</h1>
+
+            <div id="button-2">
+                <a href="index.html">Sign In</a>
+            </div>
+       </div>
+
+       <div id="category">
+            <a href="index.html">New Arrivals</a>
+            <a href="index.html">Costumes</a>
+            <a href="index.html">Accessories</a>
+            <a href="index.html">Decorations</a>
+            <a href="index.html">Animatronics</a>
+            <a href="index.html">On Sale</a>
+            
+        </div>
     </body>
 </html>
