--- a/exercises/three-heroes/index.html
+++ b/exercises/three-heroes/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Three Heroes (Autumn)</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="hero-1" class="hero">
             <h1>Autumn</h1>
-            <h4>The season of Harvest</h4>
+            <h4>The Season of Harvest</h4>
             <a href="index2.html">Next Hero</a>
         </div>
     </body>
