--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="home-page.html">AdoptMePlz</a>
+            <a id="logo" href="index.html">AdoptMePlz</a>
 
             <div class="dropdown-container">
                 <a href="#">Adopt <i class="fa-solid fa-chevron-down"></i></a>
