--- a/projects/dropdown-menu-site/adoption-page-2.html
+++ b/projects/dropdown-menu-site/adoption-page-2.html
@@ -40,9 +40,9 @@
                 <h1>Caesar</h1>
 
                 <p>
-                    Say hello to Ceasar, our delightful penguin with a
+                    Say hello to Caesar, our delightful penguin with a
                     heart full of joy! With his friendly disposition and
-                    playful antics, Ceasar is the life of the party. He
+                    playful antics, Caesar is the life of the party. He
                     loves making new friends and lights up the room with
                     his infectious energy.
                 </p>
