--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -21,9 +21,9 @@
             <div class="dropdown-container">
                 <a href="#">Adopt <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
-                    <a href="adoption-page-1.html">Adoption 1</a>
-                    <a href="adoption-page-2.html">Adoption 2</a>
-                    <a href="adoption-page-3.html">Adoption 3</a>
+                    <a href="adoption-page-1.html">Pablo</a>
+                    <a href="adoption-page-2.html">Caesar</a>
+                    <a href="adoption-page-3.html">Rocky</a>
                 </div>
             </div>
 
