--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -21,11 +21,11 @@
             <a href="#">About Us</a>
         </div>
 
-        
+
 
         <div id="footer">
             <span>
-                &copy; 2025 Mystic Bites &reg; All Rights Reserved.
+                &copy; 2025 Mystic Bites&trade; All Rights Reserved.
             </span>
         </div>
     </body>
