--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -28,7 +28,7 @@
 
         <div id="footer">
             <span>
-                &copy; 2025 Mystic Bites &reg; All Rights Reserved.
+                &copy; 2025 Mystic Bites&trade; All Rights Reserved.
             </span>
         </div>
     </body>
