--- a/javascript-projects/function-game-copy/index.html
+++ b/javascript-projects/function-game-copy/index.html
@@ -35,7 +35,7 @@
             </div>
             <br>
             <button id="attack">Attack!</button>
-            <button id="long-attack">Long Attack!</button>
+            <button id="longAttack">Long Attack!</button>
             <button id="jump">Jump!</button>
         </div>
         
