--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -38,9 +38,12 @@
                 <li>Puzzle Patty</li>
                 <li>Secret Sandwich</li>
                 <li>Mystery Munchies</li>
-                <li>Brain-twist Bites</li>
+                <li>Boggling Bites</li>
                 <li>Riddling Roast</li>
                 <li>Curly Conundrum</li>
+                <li>Difficult Deluxe</li>
+                <li>Brain-tease Bowl</li>
+                <li>Stickler Sausage</li>
             </ul>
         </div>
 
