--- a/projects/final-eval/index.html
+++ b/projects/final-eval/index.html
@@ -10,31 +10,53 @@
     <body>
         <div class="single-column-layout">
 
-            <h4>John and Jane Smith's</h4>
+            <h4 id="name">John and Jane Smith's</h4>
 
-            <h1>Super Bowl LVIII</h1>
+            <h1 id="superbowl">Super Bowl LVIII</h1>
 
-            <h3>Extravaganza Party</h3>
+            <h3 id="extra-party">Extravaganza Party</h3>
 
-            <h1>Sunday, Feb 11 2024 @ 6pm</h1>
+            <div class="side-by-side">
+                <div class="image-container">
+                    <img
+                        src="images/detroit-lions-logo.png"
+                        alt="Detriot Lions"
+                    >
 
-            <p>
+                    <h2 class="team">Detriot Lions</h2>
+                </div>
+
+                <h1 class="team">VS.</h1>
+
+                <div class="image-container">
+                    <img
+                        src="images/philadelphia-eagles-logo.png"
+                        alt="Philadelphia Eagles"
+                    >
+
+                    <h2 class="team">Philadelphia Eagles</h2>
+                </div>
+            </div>
+
+            <h2 id="time">Sunday, Feb 11 2024 @ 6pm</h2>
+
+            <p id="start">
                 Join us for the Ultimate Super Bowl
                 Sunday Bash!
             </p>
 
-            <p>
+            <p id="end">
                 We'll have hot food, cold drinks, and big 
                 screens; all that's missing is you!
             </p>
 
-            <h4>The party will be at 1234 Main St, Anytown, USA</h4>
+            <h4 id="location">The party will be at 1234 Main St, Anytown, USA</h4>
 
             <a href="#">I can make it!</a>
 
             <a href="#">I can't make it...</a>
 
-            <h6>Questions? Call 555.123.4567</h6>
+            <h6 id="contact">Questions? Call 555.123.4567</h6>
         </div>
     </body>
 </html>
