--- a/projects/final-eval/index.html
+++ b/projects/final-eval/index.html
@@ -50,7 +50,9 @@
                 screens; all that's missing is you!
             </p>
 
-            <h4 id="location">The party will be at 1234 Main St, Anytown, USA</h4>
+            <h4 id="location">
+                The party will be at 1234 Main St, Anytown, USA
+            </h4>
 
             <a href="#">I can make it!</a>
 
