--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -28,23 +28,78 @@
             <div class="text-container">
                 <h1>*NEW*</h1>
                 <h2>Mystery Burger Deluxe</h2>
-                <h2>$9.99</h2>
+                <h2>$11.99</h2>
                 <a href="#">TRY NOW</a>
             </div>
         </div> 
 
+        <div id="menu-container">
+            <h1 id="menu-title">Menu</h1>
+        </div>
+
         <div id="menu">
-            <ul>
-                <li>Puzzle Patty</li>
-                <li>Secret Sandwich</li>
-                <li>Mystery Munchies</li>
-                <li>Boggling Bites</li>
-                <li>Riddling Roast</li>
-                <li>Curly Conundrum</li>
-                <li>Difficult Deluxe</li>
-                <li>Brain-tease Bowl</li>
-                <li>Stickler Sausage</li>
-            </ul>
+            <a href="#">
+                <div id="item-1" class="item">
+                    <h1>Puzzle Patty</h1>
+                    <p>$5.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-2" class="item">
+                    <h1>Secret Sandwich</h1>
+                    <p>$4.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-3" class="item">
+                    <h1>Mystery Munchies</h1>
+                    <p>$3.49</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-4" class="item">
+                    <h1>Boggling Bites</h1>
+                    <p>$3.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-5" class="item">
+                    <h1>Riddling Roast</h1>
+                    <p>$7.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-6" class="item">
+                    <h1>Curly Conundrum</h1>
+                    <p>$2.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-7" class="item">
+                    <h1>Difficult Deluxe</h1>
+                    <p>$5.99</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-8" class="item">
+                    <h1>Brain-tease Bowl</h1>
+                    <p>$4.49</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div id="item-9" class="item">
+                    <h1>Stickler Sausage</h1>
+                    <p>$3.99</p>
+                </div>
+            </a>
         </div>
 
         <div id="footer">
