--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -18,7 +18,7 @@
 
             <a href="menu.html">Menu</a>
             <a href="#">Catering</a>
-            <a href="#">About Us</a>
+            <a href="#">About</a>
         </div>
 
         <div class="side-by-side">
