--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -23,7 +23,10 @@
 
         <div class="side-by-side">
             <div class="image-container">
-                <img src="images/feature-burger.png" alt="Featured Burger Tower">
+                <img
+                    src="images/feature-burger.png"
+                    alt="Featured Burger Tower"
+                >
             </div>
             <div class="text-container">
                 <h1>*NEW*</h1>
