--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -31,6 +31,10 @@
             <div class="text-container">
                 <h1>*NEW*</h1>
                 <h2>Mystery Burger Deluxe</h2>
+                <p>
+                    Deluxe burger with a large stack of random toppings
+                    for the customer to guess.
+                </p>
                 <h2>$11.99</h2>
                 <a href="#">TRY NOW</a>
             </div>
