--- a/javascript-projects/function-game-copy/index.html
+++ b/javascript-projects/function-game-copy/index.html
@@ -11,7 +11,7 @@
         <div id="controls">
             <div class="instructions">
                 <h3>INSTRUCTIONS</h3>
-                Use ASDW to move, SHIFT+ASDW to jump, and SPACE to attack.
+                Use WASD to move, SHIFT+WASD to jump, and SPACE to attack.
                 <br>
                 OR
                 <br>
