--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -45,28 +45,28 @@
         </div>
 
         <div id="menu">
-            <a href="#">
+            <a href="puzzle-patty.html">
                 <div id="item-1" class="item">
                     <h1>Puzzle Patty</h1>
                     <p>$5.99</p>
                 </div>
             </a>
 
-            <a href="#">
+            <a href="secret-sandwich.html">
                 <div id="item-2" class="item">
                     <h1>Secret Sandwich</h1>
                     <p>$4.99</p>
                 </div>
             </a>
 
-            <a href="#">
+            <a href="mystery-muchies.html">
                 <div id="item-3" class="item">
                     <h1>Mystery Munchies</h1>
                     <p>$3.49</p>
                 </div>
             </a>
 
-            <a href="#">
+            <a href="boggling-bites.html">
                 <div id="item-4" class="item">
                     <h1>Boggling Bites</h1>
                     <p>$3.99</p>
